[project]
name = "oci-db-doctor"
version = "0.1.0"
description = "Demo of an MCP server for Oracle database diagnostics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "oracledb",
    "streamlit",
    "langgraph",
    "langchain-openai",
    "langchain-mcp-adapters",
    "oci-openai",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oci_db_doctor"]
